--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "sails": "^0.12.13",
     "sails-disk": "~0.10.9"
   },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-uglifyes": "^0.1.3",
+    "gulp-webp": "^3.0.0"
+  },
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js"
